--- a/professor/styles.css
+++ b/professor/styles.css
@@ -626,3 +626,141 @@ body.light .modal-content {
 
 
 
+/* calculo e frequencia */
+.calculo-section {
+  padding: 25px 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-height: calc(100vh - 100px);
+}
+
+.calculo-section h1 {
+  font-size: 1.6rem;
+  color: var(--rosa-principal);
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.calculo-container {
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
+  gap: 25px;
+  align-items: start;
+}
+
+.input-area, .resultado-area {
+  background-color: var(--card-bg);
+  padding: 18px;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+}
+
+.input-area h2, .resultado-area h2 {
+  color: var(--texto);
+  margin-bottom: 10px;
+  border-bottom: 2px solid var(--rosa-principal);
+  padding-bottom: 14px;
+  font-size: 1.1rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  font-weight: 600;
+  font-size: 0.9rem;
+  margin-bottom: 4px;
+}
+
+.form-group input {
+  padding: 8px;
+  border-radius: 6px;
+  border: 1px solid var(--borda);
+  background-color: var(--input-bg);
+  color: var(--texto);
+  font-size: 0.9rem;
+}
+
+.form-row {
+  display: flex;
+  gap: 30px;
+}
+
+.input-area input{
+  background-color: rgba(155, 155, 155, 0.285)
+}
+
+
+.btn-calc {
+  background-color: #ff0054;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  width: 100%;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s ease;
+  margin-top: 8px;
+}
+
+.btn-calc:hover {
+  opacity: 0.9;
+}
+
+/* === AJUSTE DE TAMANHO DA ÁREA DE RESULTADO FINAL === */
+
+.resultado-area {
+  gap: 8px;
+  padding: 10px 15px;
+}
+
+.resultado-card {
+  margin-top: 20px;
+  margin-bottom: 4%;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+  background-color: rgba(73, 73, 73, 0.628);
+}
+
+/* 🎨 Ajuste específico para o modo escuro */
+body.light .resultado-card {
+  background-color: rgba(234, 234, 234, 0.628); /* levemente mais claro que o fundo */
+}
+
+.resultado-card h3 {
+  font-size: 0.9rem;
+  margin-bottom: 10px;
+}
+
+.resultado-card p {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.status p {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.status.aprovado p,
+.status.reprovado p {
+  font-weight: 700;
+}
+
+@media (max-height: 800px) {
+  .resultado-card {
+    padding: 8px 10px;
+  }
+  .resultado-card p {
+    font-size: 0.9rem;
+  }
+  .status p {
+    font-size: 0.85rem;
+  }
+}
+
