--- a/frontend/admin/styles.css
+++ b/frontend/admin/styles.css
@@ -275,7 +275,7 @@ body.light .stat-card {
 /* Título */
 .matriculas-container h2 {
   font-size: 2rem;
-  color: var(--text);
+  color: var(--accent);
   margin-bottom: 10px;
 }
 
@@ -796,7 +796,7 @@ body.light .popup-content select {
   top: 20px;
   left: 20px;
   font-size: 24px;
-  cursor: pointer; /* 👈 faz o ponteiro mudar ao passar o mouse */
+  cursor: pointer; 
   transition: transform 0.2s ease;
   z-index: 1000;
 }
